--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,13 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Deploy a render
+name: Deploy a netlify
 
 on:
   workflow_run:
     workflows: [Tests]
     branches:
-      - master
+      - main
     types:
       - completed
 
