--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,4 +17,4 @@ jobs:
     runs-on: ubuntu-latest 
     
     steps:
-    - run: curl ${{ secrets.DEPLOY_HOOK }}
+    - run: curl -X POST -d {} ${{ secrets.DEPLOY_HOOK }}
