--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -15,6 +15,7 @@ spec:
       containers:
       - name: my-app
         image: my-app
+        imagePullPolicy: Never
         ports:
         - containerPort: 80
         resources:
